@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -68,7 +68,10 @@ public class ConfigUtil {
     }
 
     static @Nullable Object getDefaultValueAsCorrectType(String parameterName, Type parameterType,
-            String defaultValue) {
+            @Nullable String defaultValue) {
+        if (defaultValue == null) {
+            return null;
+        }
         try {
             switch (parameterType) {
                 case TEXT:
@@ -174,18 +177,24 @@ public class ConfigUtil {
      * @throws IllegalArgumentException if an invalid type has been given
      */
     public static Object normalizeType(Object value, @Nullable ConfigDescriptionParameter configDescriptionParameter) {
+        Object result = null;
         if (configDescriptionParameter != null) {
             Normalizer normalizer = NormalizerFactory.getNormalizer(configDescriptionParameter);
-            return normalizer.normalize(value);
-        } else if (value instanceof Boolean || value instanceof String || value instanceof BigDecimal) {
-            return value;
+            result = normalizer.normalize(value);
+        } else if (value instanceof Boolean) {
+            result = NormalizerFactory.getNormalizer(Type.BOOLEAN).normalize(value);
+        } else if (value instanceof String) {
+            result = NormalizerFactory.getNormalizer(Type.TEXT).normalize(value);
         } else if (value instanceof Number) {
-            return new BigDecimal(value.toString());
+            result = NormalizerFactory.getNormalizer(Type.DECIMAL).normalize(value);
         } else if (value instanceof Collection collection) {
-            return normalizeCollection(collection);
+            result = normalizeCollection(collection);
+        }
+        if (result != null) {
+            return result;
         }
         throw new IllegalArgumentException(
-                "Invalid type '{" + value.getClass().getCanonicalName() + "}' of configuration value!");
+                "Invalid type '{%s}' of configuration value!".formatted(value.getClass().getCanonicalName()));
     }
 
     /**
@@ -237,7 +246,7 @@ public class ConfigUtil {
      * @param value the value to return as normalized type
      * @return corresponding value as a valid type
      */
-    public static Object normalizeType(Object value) {
+    public static @Nullable Object normalizeType(Object value) {
         return normalizeType(value, null);
     }
 
@@ -257,7 +266,7 @@ public class ConfigUtil {
             for (final Object it : collection) {
                 final Object normalized = normalizeType(it, null);
                 lst.add(normalized);
-                if (normalized.getClass() != lst.get(0).getClass()) {
+                if (normalized.getClass() != lst.getFirst().getClass()) {
                     throw new IllegalArgumentException(
                             "Invalid configuration property. Heterogeneous collection value!");
                 }
