@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -58,6 +58,12 @@ public class ConfigurationTest {
         public @NonNullByDefault({}) String listField;
     }
 
+    public static record ConfigRecord(int intField, String stringField, boolean booleanField, List<String> listField,
+            Set<String> setField, org.openhab.core.config.core.ConfigurationTest.ConfigClass.MyEnum enumField) {
+        @SuppressWarnings("unused")
+        private static final String CONSTANT = "SOME_CONSTANT";
+    }
+
     @Test
     public void assertGetConfigAsWorks() {
         Configuration configuration = new Configuration();
@@ -70,6 +76,27 @@ public class ConfigurationTest {
         configuration.put("notExisitingProperty", true);
 
         ConfigClass configClass = configuration.as(ConfigClass.class);
+
+        assertThat(configClass.intField, is(equalTo(1)));
+        assertThat(configClass.booleanField, is(false));
+        assertThat(configClass.stringField, is("test"));
+        assertThat(configClass.enumField, is(ConfigClass.MyEnum.ON));
+        assertThat(configClass.listField, is(hasItems("one", "two", "three")));
+        assertThat(configClass.setField, is(hasItems("one", "two", "three")));
+    }
+
+    @Test
+    public void assertGetConfigAsWorksForRecord() {
+        Configuration configuration = new Configuration();
+        configuration.put("intField", 1);
+        configuration.put("booleanField", false);
+        configuration.put("stringField", "test");
+        configuration.put("enumField", "ON");
+        configuration.put("listField", List.of("one", "two", "three"));
+        configuration.put("setField", List.of("one", "two", "three"));
+        configuration.put("notExisitingProperty", true);
+
+        ConfigRecord configClass = configuration.as(ConfigRecord.class);
 
         assertThat(configClass.intField, is(equalTo(1)));
         assertThat(configClass.booleanField, is(false));
@@ -119,7 +146,7 @@ public class ConfigurationTest {
         configuration.put("stringField", "someValue");
         configuration.put("additionalField", "");
         assertThat(props.get("stringField"), is(nullValue()));
-        assertThat(values.get(0), is(nullValue()));
+        assertThat(values.getFirst(), is(nullValue()));
         assertThat(values.get(1), is(nullValue()));
         assertThat(values.size(), is(2));
         assertThat(keys.size(), is(2));
@@ -160,18 +187,42 @@ public class ConfigurationTest {
     @Test
     public void assertNormalizationInSetProperties() {
         Map<String, Object> properties = new HashMap<>();
+        properties.put("byteField", Byte.valueOf("1"));
+        properties.put("shortField", Short.valueOf("1"));
         properties.put("intField", 1);
+        properties.put("longField", Long.valueOf("1"));
+        properties.put("doubleField", Double.valueOf("1"));
+        properties.put("floatField", Float.valueOf("1"));
+        properties.put("bigDecimalField", BigDecimal.ONE);
 
         Configuration configuration = new Configuration();
         configuration.setProperties(properties);
+        assertThat(configuration.get("byteField"), is(equalTo(BigDecimal.ONE)));
+        assertThat(configuration.get("shortField"), is(equalTo(BigDecimal.ONE)));
         assertThat(configuration.get("intField"), is(equalTo(BigDecimal.ONE)));
+        assertThat(configuration.get("longField"), is(equalTo(BigDecimal.ONE)));
+        assertThat(configuration.get("doubleField"), is(equalTo(new BigDecimal("1.0"))));
+        assertThat(configuration.get("floatField"), is(equalTo(new BigDecimal("1.0"))));
+        assertThat(configuration.get("bigDecimalField"), is(equalTo(BigDecimal.ONE)));
     }
 
     @Test
     public void assertNormalizationInPut() {
         Configuration configuration = new Configuration();
+        configuration.put("byteField", Byte.valueOf("1"));
+        configuration.put("shortField", Short.valueOf("1"));
         configuration.put("intField", 1);
+        configuration.put("longField", Long.valueOf("1"));
+        configuration.put("doubleField", Double.valueOf("1"));
+        configuration.put("floatField", Float.valueOf("1"));
+        configuration.put("bigDecimalField", BigDecimal.ONE);
+        assertThat(configuration.get("byteField"), is(equalTo(BigDecimal.ONE)));
+        assertThat(configuration.get("shortField"), is(equalTo(BigDecimal.ONE)));
         assertThat(configuration.get("intField"), is(equalTo(BigDecimal.ONE)));
+        assertThat(configuration.get("longField"), is(equalTo(BigDecimal.ONE)));
+        assertThat(configuration.get("doubleField"), is(equalTo(new BigDecimal("1.0"))));
+        assertThat(configuration.get("floatField"), is(equalTo(new BigDecimal("1.0"))));
+        assertThat(configuration.get("bigDecimalField"), is(equalTo(BigDecimal.ONE)));
     }
 
     @Test
