@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -62,9 +62,9 @@ public class SseUtilTest {
         List<String> regexes = SseUtil
                 .convertToRegex("openhab/*/test/test/test/test,    openhab/test/*/test/test/test, openhab/*,qivicon/*");
 
-        assertThat("openhab/test/test/test/test/test".matches(regexes.get(0)), is(true));
-        assertThat("openhab/asdf/test/test/test/test".matches(regexes.get(0)), is(true));
-        assertThat("openhab/asdf/ASDF/test/test/test".matches(regexes.get(0)), is(false));
+        assertThat("openhab/test/test/test/test/test".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/asdf/test/test/test/test".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/asdf/ASDF/test/test/test".matches(regexes.getFirst()), is(false));
 
         assertThat("openhab/test/test/test/test/test".matches(regexes.get(1)), is(true));
         assertThat("openhab/asdf/test/test/test/test".matches(regexes.get(1)), is(false));
@@ -83,9 +83,9 @@ public class SseUtilTest {
     public void testMoreFilterMatchers() {
         List<String> regexes = SseUtil.convertToRegex(",    *, openhab/items/*/added, openhab/items/*/*");
 
-        assertThat("openhab/test/test/test/test/test".matches(regexes.get(0)), is(true));
-        assertThat("openhab/asdf/test/test/test/test".matches(regexes.get(0)), is(true));
-        assertThat("openhab/asdf/ASDF/test/test/test".matches(regexes.get(0)), is(true));
+        assertThat("openhab/test/test/test/test/test".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/asdf/test/test/test/test".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/asdf/ASDF/test/test/test".matches(regexes.getFirst()), is(true));
 
         assertThat("openhab/test/test/test/test/test".matches(regexes.get(1)), is(false));
         assertThat("openhab/items/anyitem/added".matches(regexes.get(1)), is(true));
@@ -101,20 +101,20 @@ public class SseUtilTest {
     public void testEvenMoreFilterMatchers() {
         List<String> regexes = SseUtil.convertToRegex("");
 
-        assertThat("openhab/test/test/test/test/test".matches(regexes.get(0)), is(true));
-        assertThat("openhab/asdf/test/test/test/test".matches(regexes.get(0)), is(true));
-        assertThat("openhab/asdf/ASDF/test/test/test".matches(regexes.get(0)), is(true));
+        assertThat("openhab/test/test/test/test/test".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/asdf/test/test/test/test".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/asdf/ASDF/test/test/test".matches(regexes.getFirst()), is(true));
 
         regexes = SseUtil.convertToRegex("*/added");
-        assertThat("openhab/items/anyitem/added".matches(regexes.get(0)), is(true));
-        assertThat("openhab/items/anyitem/removed".matches(regexes.get(0)), is(false));
+        assertThat("openhab/items/anyitem/added".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/items/anyitem/removed".matches(regexes.getFirst()), is(false));
 
         regexes = SseUtil.convertToRegex("*added");
-        assertThat("openhab/items/anyitem/added".matches(regexes.get(0)), is(true));
-        assertThat("openhab/items/anyitem/removed".matches(regexes.get(0)), is(false));
+        assertThat("openhab/items/anyitem/added".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/items/anyitem/removed".matches(regexes.getFirst()), is(false));
 
         regexes = SseUtil.convertToRegex("openhab/items/*/state");
-        assertThat("openhab/items/anyitem/state".matches(regexes.get(0)), is(true));
-        assertThat("openhab/items/anyitem/statechanged".matches(regexes.get(0)), is(false));
+        assertThat("openhab/items/anyitem/state".matches(regexes.getFirst()), is(true));
+        assertThat("openhab/items/anyitem/statechanged".matches(regexes.getFirst()), is(false));
     }
 }
