@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import java.io.File;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.eclipse.emf.common.util.URI;
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -50,7 +49,7 @@ public class MappingUriExtensions extends UriExtensions {
     }
 
     protected String calcServerLocation(String configFolder) {
-        Path configPath = Paths.get(configFolder);
+        Path configPath = Path.of(configFolder);
         Path absoluteConfigPath = configPath.toAbsolutePath();
         java.net.URI configPathURI = absoluteConfigPath.toUri();
         return removeTrailingSlash(configPathURI.toString());
@@ -184,6 +183,6 @@ public class MappingUriExtensions extends UriExtensions {
         // output new: file:///d/
 
         // We use this method now to keep the old behavior.
-        return Paths.get(uri).toUri().toString();
+        return Path.of(uri).toUri().toString();
     }
 }
