@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -22,6 +22,7 @@ import java.util.Dictionary;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.function.Predicate;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -153,7 +154,7 @@ public class JavaOSGiTest extends JavaTest {
             new MissingServiceAnalyzer(System.out, bundleContext).printMissingServiceDetails(clazz);
             return null;
         } else {
-            return filteredServices.get(0);
+            return filteredServices.getFirst();
         }
     }
 
@@ -264,11 +265,8 @@ public class JavaOSGiTest extends JavaTest {
     }
 
     private void saveServiceRegistration(final String interfaceName, final ServiceRegistration<?> srvReg) {
-        List<ServiceRegistration<?>> regs = registeredServices.get(interfaceName);
-        if (regs == null) {
-            regs = new ArrayList<>();
-            registeredServices.put(interfaceName, regs);
-        }
+        List<ServiceRegistration<?>> regs = Objects
+                .requireNonNull(registeredServices.computeIfAbsent(interfaceName, k -> new ArrayList<>()));
         regs.add(srvReg);
     }
 
@@ -319,7 +317,7 @@ public class JavaOSGiTest extends JavaTest {
         ServiceRegistration<?> reg = null;
         List<ServiceRegistration<?>> regList = registeredServices.remove(interfaceName);
         if (regList != null) {
-            reg = regList.get(0);
+            reg = regList.getFirst();
             regList.forEach(r -> r.unregister());
         }
         return reg;
