@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,6 +19,7 @@ import java.net.InterfaceAddress;
 import java.net.NetworkInterface;
 import java.net.SocketException;
 import java.net.UnknownHostException;
+import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -34,6 +35,7 @@ import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -55,6 +57,7 @@ import org.slf4j.LoggerFactory;
  * @author Stefan Triller - Converted to OSGi service with primary ipv4 conf
  * @author Gary Tse - Network address change listener
  * @author Tim Roberts - Added primary address change to network address change listener
+ * @author Leo Siepel - Added methods to improve support for network scanning
  */
 @Component(configurationPid = "org.openhab.network", property = { "service.pid=org.openhab.network",
         "service.config.description.uri=system:network", "service.config.label=Network Settings",
@@ -108,8 +111,8 @@ public class NetUtil implements NetworkAddressService {
         lastKnownInterfaceAddresses = List.of();
         networkAddressChangeListeners = ConcurrentHashMap.newKeySet();
 
-        if (networkInterfacePollFuture != null) {
-            networkInterfacePollFuture.cancel(true);
+        if (networkInterfacePollFuture instanceof ScheduledFuture<?> future) {
+            future.cancel(true);
             networkInterfacePollFuture = null;
         }
     }
@@ -156,13 +159,13 @@ public class NetUtil implements NetworkAddressService {
     public @Nullable String getPrimaryIpv4HostAddress() {
         String primaryIP;
 
-        if (primaryAddress != null) {
-            String[] addrString = primaryAddress.split("/");
+        if (primaryAddress instanceof String address) {
+            String[] addrString = address.split("/");
             if (addrString.length > 1) {
                 String ip = getIPv4inSubnet(addrString[0], addrString[1]);
                 if (ip == null) {
                     // an error has occurred, using first interface like nothing has been configured
-                    LOGGER.warn("Invalid address '{}', will use first interface instead.", primaryAddress);
+                    LOGGER.warn("Invalid address '{}', will use first interface instead.", address);
                     primaryIP = getFirstLocalIPv4Address();
                 } else {
                     primaryIP = ip;
@@ -306,7 +309,7 @@ public class NetUtil implements NetworkAddressService {
     private static @Nullable String getFirstIpv4BroadcastAddress() {
         final List<String> broadcastAddresses = getAllBroadcastAddresses();
         if (!broadcastAddresses.isEmpty()) {
-            return broadcastAddresses.get(0);
+            return broadcastAddresses.getFirst();
         } else {
             return null;
         }
@@ -386,7 +389,7 @@ public class NetUtil implements NetworkAddressService {
     /**
      * Get the network address a specific ip address is in
      *
-     * @param ipAddressString ipv4 address of the device (i.e. 192.168.5.1)
+     * @param ipAddressString IPv4 address of the device (i.e. 192.168.5.1)
      * @param netMask netmask in bits (i.e. 24)
      * @return network a device is in (i.e. 192.168.5.0)
      * @throws IllegalArgumentException if parameters are wrong
@@ -422,7 +425,7 @@ public class NetUtil implements NetworkAddressService {
     /**
      * Get the network broadcast address of the subnet a specific ip address is in
      *
-     * @param ipAddressString ipv4 address of the device (i.e. 192.168.5.1)
+     * @param ipAddressString IPv4 address of the device (i.e. 192.168.5.1)
      * @param prefix network prefix in bits (i.e. 24)
      * @return network broadcast address of the network the device is in (i.e. 192.168.5.255)
      * @throws IllegalArgumentException if parameters are wrong
@@ -510,8 +513,8 @@ public class NetUtil implements NetworkAddressService {
     }
 
     private void scheduleToPollNetworkInterface(int intervalInSeconds) {
-        if (networkInterfacePollFuture != null) {
-            networkInterfacePollFuture.cancel(true);
+        if (networkInterfacePollFuture instanceof ScheduledFuture<?> future) {
+            future.cancel(true);
             networkInterfacePollFuture = null;
         }
 
@@ -579,9 +582,6 @@ public class NetUtil implements NetworkAddressService {
     }
 
     private boolean getConfigParameter(Map<String, Object> parameters, String parameter, boolean defaultValue) {
-        if (parameters == null) {
-            return defaultValue;
-        }
         Object value = parameters.get(parameter);
         if (value == null) {
             return defaultValue;
@@ -594,5 +594,93 @@ public class NetUtil implements NetworkAddressService {
         } else {
             return defaultValue;
         }
+    }
+
+    /**
+     * For all network interfaces (except loopback) all IPv4 addresses are returned.
+     * This list can for example, be used to scan the network for available devices.
+     *
+     * @return A full list of IP {@link InetAddress} (except network and broadcast)
+     */
+    public static List<InetAddress> getFullRangeOfAddressesToScan() {
+        List<InetAddress> addressesToScan = List.of();
+        List<CidrAddress> ipV4InterfaceAddresses = NetUtil.getAllInterfaceAddresses().stream()
+                .filter(a -> a.getAddress() instanceof Inet4Address).collect(Collectors.toList());
+
+        for (CidrAddress i : ipV4InterfaceAddresses) {
+            addressesToScan.addAll(getAddressesRangeByCidrAddress(i, i.getPrefix()));
+        }
+        return addressesToScan;
+    }
+
+    /**
+     * For the given {@link CidrAddress} all IPv4 addresses are returned.
+     * This list can, for example, be used to scan the network for available devices.
+     *
+     * @param iFaceAddress The {@link CidrAddress} of the network interface
+     * @param maxAllowedPrefixLength Control the maximum allowed prefix length of the network (e.g. 24 for class C).
+     *            iFaceAddress's with a larger prefix are ignored and return an empty result.
+     * @return A full list of IP {@link InetAddress} (except network and broadcast)
+     */
+    public static List<InetAddress> getAddressesRangeByCidrAddress(CidrAddress iFaceAddress,
+            int maxAllowedPrefixLength) {
+        if (!(iFaceAddress.getAddress() instanceof Inet4Address) || iFaceAddress.getPrefix() < maxAllowedPrefixLength) {
+            return List.of();
+        }
+
+        List<byte[]> addresses = getAddressesInSubnet(iFaceAddress.getAddress().getAddress(), iFaceAddress.getPrefix());
+        if (addresses.size() > 2) {
+            addresses.removeFirst(); // remove network address
+            addresses.removeLast(); // remove broadcast address
+        }
+
+        return addresses.stream().map(m -> {
+            try {
+                return InetAddress.getByAddress(m);
+            } catch (UnknownHostException e) {
+                return null;
+            }
+        }).filter(f -> f != null).sorted((a, b) -> {
+            byte[] aOct = a.getAddress();
+            byte[] bOct = b.getAddress();
+            int r = 0;
+            for (int i = 0; i < aOct.length && i < bOct.length; i++) {
+                r = Integer.compare(aOct[i] & 0xff, bOct[i] & 0xff);
+                if (r != 0) {
+                    return r;
+                }
+            }
+            return r;
+        }).collect(Collectors.toList());
+    }
+
+    /**
+     * Calculate each IP address within a subnet
+     *
+     * @param address IPv4 address in byte array form (i.e. 127.0.0.1 = 01111111 00000000 00000000 00000001)
+     * @param maskLength Network mask length (i.e. the number after the forward-slash, '/', in CIDR notation)
+     * @return A list of all possible IP addresses in byte array form
+     */
+    private static List<byte[]> getAddressesInSubnet(byte[] address, int maskLength) {
+        byte[] lowestAddress = address.clone();
+        for (int bit = maskLength; bit < 32; bit++) {
+            lowestAddress[bit / 8] &= ~(1 << (bit % 8));
+        }
+        int lowestAddressAsLong = ByteBuffer.wrap(lowestAddress).getInt(); // big-endian by default
+
+        byte[] highestAddress = address.clone();
+        for (int bit = maskLength; bit < 32; bit++) {
+            highestAddress[bit / 8] |= ~(1 << (bit % 8));
+        }
+        int highestAddressAsLong = ByteBuffer.wrap(highestAddress).getInt();
+
+        List<byte[]> addresses = new ArrayList<byte[]>();
+        for (int i = lowestAddressAsLong; i <= highestAddressAsLong; i++) {
+            ByteBuffer dbuf = ByteBuffer.allocate(4);
+            dbuf.putInt(i);
+            addresses.add(dbuf.array());
+        }
+
+        return addresses;
     }
 }
