@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -68,7 +68,7 @@ public class ThingChannelsTest extends JavaOSGiTest {
 
     @Test
     public void testAutoUpdatePolicyNotSetOnNewChannels() {
-        Channel channel = ChannelBuilder.create(new ChannelUID(THING_UID, CHANNEL_IDS.get(0)), null).build();
+        Channel channel = ChannelBuilder.create(new ChannelUID(THING_UID, CHANNEL_IDS.getFirst()), null).build();
         assertNull(channel.getAutoUpdatePolicy());
     }
 }
