@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -20,6 +20,7 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Map;
 
@@ -91,7 +92,7 @@ public class FirmwareTest extends JavaOSGiTest {
         String description = "description";
         String model = "model";
         boolean modelRestricted = true;
-        URL onlineChangelog = new URL("http://online.changelog");
+        URL onlineChangelog = URI.create("http://online.changelog").toURL();
         String prerequisiteVersion = "0.0.9";
         String md5hash = "123abc";
         String vendor = "vendor";
@@ -304,7 +305,7 @@ public class FirmwareTest extends JavaOSGiTest {
         String description = "description";
         String model = "model";
         boolean modelRestricted = true;
-        URL onlineChangelog = new URL("https://secure.com/changelog");
+        URL onlineChangelog = URI.create("https://secure.com/changelog").toURL();
         String prerequisiteVersion = "0.1";
         String vendor = "vendor";
         Map<String, String> properties = Map.of("prop1", "val1", "prop2", "val2");
@@ -330,7 +331,7 @@ public class FirmwareTest extends JavaOSGiTest {
         String description = "description";
         String model = "model";
         boolean modelRestricted = true;
-        URL onlineChangelog = new URL("https://secure.com/changelog");
+        URL onlineChangelog = URI.create("https://secure.com/changelog").toURL();
         String prerequisiteVersion = "0.1";
         String vendor = "vendor";
         Map<String, String> properties = Map.of("prop1", "val1", "prop2", "val2");
