@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,7 +14,6 @@ package org.openhab.core.tools.i18n.plugin;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -73,7 +72,7 @@ public class Translations {
                 return 1;
             }
 
-            return entries.get(0).getKey().compareTo(other.entries.get(0).getKey());
+            return entries.getFirst().getKey().compareTo(other.entries.getFirst().getKey());
         }
 
         public boolean hasTranslations() {
@@ -123,9 +122,7 @@ public class Translations {
         }
 
         public Stream<String> keysStream() {
-            return groups.stream() //
-                    .map(TranslationsGroup::keysStream) //
-                    .flatMap(Function.identity());
+            return groups.stream().flatMap(TranslationsGroup::keysStream);
         }
 
         public Stream<String> linesStream() {
@@ -138,8 +135,7 @@ public class Translations {
             }
             groups.stream() //
                     .filter(TranslationsGroup::hasTranslations) //
-                    .map(TranslationsGroup::linesStream) //
-                    .flatMap(Function.identity()) //
+                    .flatMap(TranslationsGroup::linesStream) //
                     .forEach(builder::add);
             builder.add("");
             return builder.build();
@@ -181,16 +177,13 @@ public class Translations {
     }
 
     public Stream<String> keysStream() {
-        return sections.stream() //
-                .map(TranslationsSection::keysStream) //
-                .flatMap(Function.identity());
+        return sections.stream().flatMap(TranslationsSection::keysStream);
     }
 
     public Stream<String> linesStream() {
         return sections.stream() //
                 .filter(TranslationsSection::hasTranslations) //
-                .map(TranslationsSection::linesStream) //
-                .flatMap(Function.identity());
+                .flatMap(TranslationsSection::linesStream);
     }
 
     public void removeEntries(Predicate<? super TranslationsEntry> filter) {
